--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Chaitali Chavan. It uses data from weather stack api and mapbox.</p>
         <img class='portrait' src="/img/robot.png" alt="Robot">
     </div>
     {{>footer}}
