Added humidity. Updated About Me information with the URL.

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p>This site was created by Chaitali Chavan. It uses data from weather stack api and mapbox.</p>
+        <p>This site was created by Chaitali Chavan. It uses data from <a href="https://weatherstack.com/">Weather Stack</a> and <a href="https://www.mapbox.com/">Mapbox</a> API.</p>
         <img class='portrait' src="/img/robot.png" alt="Robot">
     </div>
     {{>footer}}
